ensure to not crash on missing context menu

contextMenu() is allowed to return a nullptr

check for this to avoid crash on menubar hide/show

see backtrace in related bug, nullptr as menu

BUG: 426939